--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Responsive Dark Calculator</title>
+  <title>Dark Calculator</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -36,5 +36,8 @@
       <button class="btn equal">=</button>
     </div>
   </div>
+
+  <!-- JavaScript logic file -->
+  <script src="script.js"></script>
 </body>
 </html>
